--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,35 +12,49 @@
   "dir": "ltr",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/manifest-icon-192.maskable.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any maskable"
     },
     {
-      "src": "/icon-512.png",
+      "src": "/manifest-icon-512.maskable.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any maskable"
     }
   ],
-  "categories": ["utilities", "productivity", "business"],
+  "categories": [
+    "utilities",
+    "productivity",
+    "business"
+  ],
   "shortcuts": [
     {
       "name": "Generar QR URL",
       "short_name": "URL QR",
       "description": "Crear código QR para enlace web",
       "url": "/?type=url",
-      "icons": [{ "src": "/icon-192.png", "sizes": "192x192" }]
+      "icons": [
+        {
+          "src": "/manifest-icon-192.maskable.png",
+          "sizes": "192x192"
+        }
+      ]
     },
     {
       "name": "Generar QR WhatsApp",
       "short_name": "WhatsApp QR",
       "description": "Crear código QR para WhatsApp",
       "url": "/?type=whatsapp",
-      "icons": [{ "src": "/icon-192.png", "sizes": "192x192" }]
+      "icons": [
+        {
+          "src": "/manifest-icon-192.maskable.png",
+          "sizes": "192x192"
+        }
+      ]
     }
   ],
   "related_applications": [],
   "prefer_related_applications": false
-} 
+}
